--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -76,7 +76,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "..."
+        "Кобычев Кирилл, @hikoby"
       ],
       "metadata": {
         "id": "Fc7hKssHphI5"
@@ -85,10 +85,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "..."
+        "Иванов Егор, @Jaibesiondaide"
       ],
       "metadata": {
         "id": "JXbgFQ4XpsRY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Игорь Земенков, @iZemM"
+      ],
+      "metadata": {
+        "id": "UjfYpv2g7vWq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/kirillkobychev/HSE-ML-TEAM-4"
+      ],
+      "metadata": {
+        "id": "9oPtdaKx71Oy"
       }
     },
     {
