--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -613,12 +613,12 @@
         "`duration_ms` -продолжительность в милисекундах  \n",
         "`energy` - энергичность  \n",
         "`instrumentalness` - инструментальность  \n",
-        "`key` - тональность  \n",
+        "**`key` - тональность**  \n",
         "`liveness` - привлекательность  \n",
         "`loudness` - громкость  \n",
-        "`mode` - наклонение  \n",
+        "**`mode` - наклонение**  \n",
         "`speechiness` - выразительность  \n",
-        "`tempo` - темп  \n",
+        "**`tempo` - темп**  \n",
         "`obtained_date` - дата загрузки в сервис  \n",
         "`valence` - привлекательность произведения для пользователей сервиса  \n",
         "`music_genre` - музыкальный жанр"
@@ -1034,44 +1034,21 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"Train null\")\n",
+        "[print(f\"{i}: {train[i].isnull().sum()}\") for i in train.columns if train[i].isnull().sum() > 0]\n",
         "print(\"Train data shape:\", train.shape)\n",
+        "print(\"\\nTest null\")\n",
+        "[print(f\"{i}: {test[i].isnull().sum()}\") for i in test.columns if test[i].isnull().sum() > 0]\n",
         "print(\"Test data shape: \", test.shape)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LGlK_wx38Wos",
-        "outputId": "9f8e168a-a7c3-45e3-b93b-9953b387cf5d"
-      },
-      "execution_count": 83,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Train data shape: (20394, 16)\n",
-            "Test data shape:  (5099, 15)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Train null\")\n",
-        "[print(f\"{i}: {train[i].isnull().sum()}\") for i in train.columns if train[i].isnull().sum() > 0]\n",
-        "print(\"\\nTest null\")\n",
-        "[print(f\"{i}: {test[i].isnull().sum()}\") for i in test.columns if test[i].isnull().sum() > 0]"
-      ],
-      "metadata": {
         "id": "gfTOf1xnNuOE",
-        "outputId": "8dbfda4d-3f61-468d-9bd3-61da080314e8",
+        "outputId": "337b6682-1f9f-4658-92a2-d62e2280af58",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,37 +1058,16 @@
             "key: 735\n",
             "mode: 506\n",
             "tempo: 442\n",
+            "Train data shape: (20394, 16)\n",
             "\n",
             "Test null\n",
             "key: 158\n",
             "mode: 149\n",
-            "tempo: 121\n"
+            "tempo: 121\n",
+            "Test data shape:  (5099, 15)\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[None, None, None]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 84
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%capture\n",
-        "profile = ProfileReport(train, title=\"Profiling Report\")\n",
-        "profile.to_file(\"Project_Music_genre_prediction.html\")"
-      ],
-      "metadata": {
-        "id": "2eqhViJrNLgt"
-      },
-      "execution_count": 85,
-      "outputs": []
     },
     {
       "cell_type": "code",
