--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -1972,13 +1972,28 @@
     {
       "cell_type": "code",
       "source": [
-        "train[\"key\"].unique()"
+        "df_train[\"key\"].isnull().sum()"
       ],
       "metadata": {
-        "id": "zqD48LKd_rJ7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zqD48LKd_rJ7",
+        "outputId": "7fa9b454-19d9-4396-cb59-d1d667d87b4e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 240,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(711)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 240
+        }
+      ]
     },
     {
       "cell_type": "markdown",
