--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -1139,17 +1139,17 @@
         "[print(f\"{i} ({train[i].dtype}): {train[i].isnull().sum()}\") for i in train.columns if train[i].isnull().sum() > 0]\n",
         "print(\"Train data shape:\", train.shape)\n",
         "print(\"\\nTest null\")\n",
-        "[print(f\"{i} ({train[i].dtype}): {test[i].isnull().sum()}\") for i in test.columns if test[i].isnull().sum() > 0]\n",
+        "[print(f\"{i} ({test[i].dtype}): {test[i].isnull().sum()}\") for i in test.columns if test[i].isnull().sum() > 0]\n",
         "print(\"Test data shape: \", test.shape)"
       ],
       "metadata": {
         "id": "gfTOf1xnNuOE",
-        "outputId": "9721487e-e06f-4a74-b0a1-0764aac64bc2",
+        "outputId": "0d244229-ceec-48f7-a367-ee41ec4055ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -3652,24 +3652,31 @@
     {
       "cell_type": "code",
       "source": [
-        "print(train_filled.shape)\n",
-        "print(test_filled.shape)"
+        "print(\"Train filled null\")\n",
+        "[print(f\"{i} ({train_filled[i].dtype}): {train_filled[i].isnull().sum()}\") for i in train_filled.columns if train_filled[i].isnull().sum() > 0]\n",
+        "print(\"Train filled data shape:\", train_filled.shape)\n",
+        "print(\"\\nTest filled null\")\n",
+        "[print(f\"{i} ({test_filled[i].dtype}): {test_filled[i].isnull().sum()}\") for i in test_filled.columns if test_filled[i].isnull().sum() > 0]\n",
+        "print(\"Test filled data shape: \", test_filled.shape)"
       ],
       "metadata": {
+        "id": "iUZxITup-Oc5",
+        "outputId": "bd1ac594-ed75-4e13-ce7d-c130e05dc40a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "6W5UTnmRjSvE",
-        "outputId": "e8370cca-f7a0-4b39-b554-db499248f18b"
+        }
       },
-      "execution_count": 70,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(20335, 16)\n",
-            "(5085, 15)\n"
+            "Train filled null\n",
+            "Train filled data shape: (20335, 16)\n",
+            "\n",
+            "Test filled null\n",
+            "Test filled data shape:  (5085, 15)\n"
           ]
         }
       ]
