--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -3652,31 +3652,60 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Train filled null\")\n",
-        "[print(f\"{i} ({train_filled[i].dtype}): {train_filled[i].isnull().sum()}\") for i in train_filled.columns if train_filled[i].isnull().sum() > 0]\n",
-        "print(\"Train filled data shape:\", train_filled.shape)\n",
-        "print(\"\\nTest filled null\")\n",
-        "[print(f\"{i} ({test_filled[i].dtype}): {test_filled[i].isnull().sum()}\") for i in test_filled.columns if test_filled[i].isnull().sum() > 0]\n",
-        "print(\"Test filled data shape: \", test_filled.shape)"
+        "print(\"Train\")\n",
+        "print(train_filled.isnull().sum())\n",
+        "print(\"\\nTest\")\n",
+        "print(test_filled.isnull().sum())"
       ],
       "metadata": {
-        "id": "iUZxITup-Oc5",
-        "outputId": "bd1ac594-ed75-4e13-ce7d-c130e05dc40a",
+        "id": "J7lU11Gk_FVV",
+        "outputId": "453f9fcb-2229-4cf7-fde0-df67a0e49ddc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train filled null\n",
-            "Train filled data shape: (20335, 16)\n",
+            "Train\n",
+            "instance_id         0\n",
+            "track_name          0\n",
+            "acousticness        0\n",
+            "danceability        0\n",
+            "duration_ms         0\n",
+            "energy              0\n",
+            "instrumentalness    0\n",
+            "key                 0\n",
+            "liveness            0\n",
+            "loudness            0\n",
+            "mode                0\n",
+            "speechiness         0\n",
+            "tempo               0\n",
+            "obtained_date       0\n",
+            "valence             0\n",
+            "music_genre         0\n",
+            "dtype: int64\n",
             "\n",
-            "Test filled null\n",
-            "Test filled data shape:  (5085, 15)\n"
+            "Test\n",
+            "instance_id         0\n",
+            "track_name          0\n",
+            "acousticness        0\n",
+            "danceability        0\n",
+            "duration_ms         0\n",
+            "energy              0\n",
+            "instrumentalness    0\n",
+            "key                 0\n",
+            "liveness            0\n",
+            "loudness            0\n",
+            "mode                0\n",
+            "speechiness         0\n",
+            "tempo               0\n",
+            "obtained_date       0\n",
+            "valence             0\n",
+            "dtype: int64\n"
           ]
         }
       ]
