--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -1087,11 +1087,11 @@
         "test.info()"
       ],
       "metadata": {
-        "id": "uYzdiQOmAsPO",
-        "outputId": "31249a3e-22da-4792-91fc-9e1a18dc9dca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uYzdiQOmAsPO",
+        "outputId": "31249a3e-22da-4792-91fc-9e1a18dc9dca"
       },
       "execution_count": 85,
       "outputs": [
@@ -1238,6 +1238,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Заполнение пропусков\n",
         "# df_train = train.copy(deep=True)\n",
         "# df_test  = test.copy(deep=True)\n",
         "\n",
@@ -1410,7 +1411,8 @@
           ]
         },
         "id": "7uFjG-Mitg8k",
-        "outputId": "23e00199-18df-4c19-fa72-56a8b8c8292d"
+        "outputId": "23e00199-18df-4c19-fa72-56a8b8c8292d",
+        "cellView": "form"
       },
       "execution_count": 36,
       "outputs": [
@@ -3612,11 +3614,11 @@
         "train_filled.shape"
       ],
       "metadata": {
-        "id": "aXA1ikIEASj2",
-        "outputId": "d2740215-1b35-4ff2-f378-4e472006055f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aXA1ikIEASj2",
+        "outputId": "d2740215-1b35-4ff2-f378-4e472006055f"
       },
       "execution_count": 82,
       "outputs": [
@@ -3647,11 +3649,11 @@
         "test_filled.shape"
       ],
       "metadata": {
-        "id": "br0vDqqkAgWT",
-        "outputId": "9653168d-035e-463b-b22b-b521ba64fe33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "br0vDqqkAgWT",
+        "outputId": "9653168d-035e-463b-b22b-b521ba64fe33"
       },
       "execution_count": 84,
       "outputs": [
@@ -3673,11 +3675,11 @@
         "train_filled.info()"
       ],
       "metadata": {
-        "id": "s6MSPx8qA4-d",
-        "outputId": "e1fceb25-010f-48fa-be9e-85c0edd86a92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s6MSPx8qA4-d",
+        "outputId": "e1fceb25-010f-48fa-be9e-85c0edd86a92"
       },
       "execution_count": 87,
       "outputs": [
@@ -3718,11 +3720,11 @@
         "test_filled.info()"
       ],
       "metadata": {
-        "id": "2lWWbJAoBAdL",
-        "outputId": "db46c644-4b90-4ed4-8c77-01dbd69be07e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2lWWbJAoBAdL",
+        "outputId": "db46c644-4b90-4ed4-8c77-01dbd69be07e"
       },
       "execution_count": 88,
       "outputs": [
@@ -3762,12 +3764,12 @@
         "train_filled.describe().T"
       ],
       "metadata": {
-        "id": "wDh_j6lSBGbp",
-        "outputId": "9e4eeb52-124a-4b53-e9f0-3fd1b0bc4ef1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "id": "wDh_j6lSBGbp",
+        "outputId": "9e4eeb52-124a-4b53-e9f0-3fd1b0bc4ef1"
       },
       "execution_count": 94,
       "outputs": [
@@ -4182,12 +4184,12 @@
         "test_filled.describe().T"
       ],
       "metadata": {
-        "id": "gkZHaU30BJ_d",
-        "outputId": "fb8f21ea-afcb-4bc9-f9e4-c30b2df2e71f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "id": "gkZHaU30BJ_d",
+        "outputId": "fb8f21ea-afcb-4bc9-f9e4-c30b2df2e71f"
       },
       "execution_count": 95,
       "outputs": [
@@ -4602,12 +4604,12 @@
         "train_filled.describe(include='object').T"
       ],
       "metadata": {
-        "id": "wYywhgftBmDH",
-        "outputId": "4d757819-b631-4d7f-8a46-6c54af2582c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "wYywhgftBmDH",
+        "outputId": "4d757819-b631-4d7f-8a46-6c54af2582c1"
       },
       "execution_count": 91,
       "outputs": [
@@ -4913,12 +4915,12 @@
         "test_filled.describe(include='object').T"
       ],
       "metadata": {
-        "id": "BPyWZcuUBpTE",
-        "outputId": "dc6379c4-9756-42fd-fa4a-498caf78af84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "BPyWZcuUBpTE",
+        "outputId": "dc6379c4-9756-42fd-fa4a-498caf78af84"
       },
       "execution_count": 92,
       "outputs": [
@@ -5216,11 +5218,11 @@
         "train_filled.duplicated().sum()"
       ],
       "metadata": {
-        "id": "-V9E2KRwCM1N",
-        "outputId": "b8530be5-1b97-4572-9876-6c5bd84a4f74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-V9E2KRwCM1N",
+        "outputId": "b8530be5-1b97-4572-9876-6c5bd84a4f74"
       },
       "execution_count": 96,
       "outputs": [
@@ -5242,11 +5244,11 @@
         "test_filled.duplicated().sum()"
       ],
       "metadata": {
-        "id": "CLfdoZYZCQRV",
-        "outputId": "2c102a76-f503-475c-fc51-9a4de11d8e1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CLfdoZYZCQRV",
+        "outputId": "2c102a76-f503-475c-fc51-9a4de11d8e1a"
       },
       "execution_count": 97,
       "outputs": [
