--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -3311,58 +3311,26 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "pivot_table = pd.crosstab(train['music_genre'], train['key'], margins=True, margins_name='Total')\n",
+        "**Сильные признаки**\n",
         "\n",
-        "# Выводим сводную таблицу\n",
-        "print(\"Сводная таблица: Распределение тональностей (key) по жанрам (music_genre):\")\n",
-        "print(pivot_table)"
+        "> 1. speechiness\n",
+        "\n",
+        "\n",
+        "> 2. instrumentalness\n",
+        "\n",
+        "\n",
+        "> 3. acousticness\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "wH49XeKmkJAk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a0fb665b-104b-4ea5-88d1-6d254a394edb"
-      },
-      "execution_count": 147,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Сводная таблица: Распределение тональностей (key) по жанрам (music_genre):\n",
-            "key             A    A#     B     C    C#     D   D#     E     F    F#     G  \\\n",
-            "music_genre                                                                    \n",
-            "Alternative   241   139   225   280   236   267   68   199   200   193   288   \n",
-            "Anime         184    92   122   209   182   202   67   146   166   121   225   \n",
-            "Blues         375   125   187   360   169   366   65   216   245    98   419   \n",
-            "Classical     123    74    74   158   110   177   79   117   117    65   165   \n",
-            "Country       244    97   144   241   154   241   80   179   136   120   281   \n",
-            "Electronic    219   190   228   224   361   203   49   179   215   185   265   \n",
-            "Hip-Hop        83   102   116    80   224    86   28    55    90    72    78   \n",
-            "Jazz          115   116    64   136    93    96   47   102   138    63   136   \n",
-            "Rap           172   187   209   200   421   202   58   132   160   166   216   \n",
-            "Rock          257   102   153   261   175   270   65   191   149   123   231   \n",
-            "Total        2013  1224  1522  2149  2125  2110  606  1516  1616  1206  2304   \n",
-            "\n",
-            "key            G#  Total  \n",
-            "music_genre               \n",
-            "Alternative   175   2511  \n",
-            "Anime         118   1834  \n",
-            "Blues         129   2754  \n",
-            "Classical      74   1333  \n",
-            "Country       127   2044  \n",
-            "Electronic    155   2473  \n",
-            "Hip-Hop        85   1099  \n",
-            "Jazz           91   1197  \n",
-            "Rap           205   2328  \n",
-            "Rock          109   2086  \n",
-            "Total        1268  19659  \n"
-          ]
-        }
-      ]
+        "id": "h7t6ms4nY8Ur"
+      }
     },
     {
       "cell_type": "markdown",
