--- a/Project_Music_genre_prediction.ipynb
+++ b/Project_Music_genre_prediction.ipynb
@@ -193,12 +193,22 @@
         "        <h1 style='font-size: 36px; color: #000; margin: 10px 0;'>{value}</h1>\n",
         "    </div>\n",
         "    \"\"\"\n",
+        "    return html\n",
+        "\n",
+        "# Функция для отображения карточек рядом\n",
+        "def display_flex_cards(cards):\n",
+        "    html = \"\"\"\n",
+        "    <div style='display: flex; gap: 10px;'>\n",
+        "    \"\"\"  # Изменено gap с 20px на 10px\n",
+        "    for title, value in cards:\n",
+        "        html += display_card(title, value)\n",
+        "    html += \"</div>\"\n",
         "    return HTML(html)"
       ],
       "metadata": {
         "id": "TaHju156O02e"
       },
-      "execution_count": 96,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -1434,51 +1444,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Размер датасета (Train)"
-      ],
-      "metadata": {
-        "id": "yeJqoXOPAc0y"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train_filled_img = train_filled.shape\n",
-        "display_card(\"Количество строк и стобцов\", f\"{train_filled_img[0]} x {train_filled_img[1]}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        },
-        "id": "oLHH6Uge3gUc",
-        "outputId": "c3a77bd4-d23a-4d89-ab89-d1b75590ef2f"
-      },
-      "execution_count": 109,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "    <div style='background-color: #f5f5f5; border-radius: 10px; padding: 20px; width: 200px; text-align: center; box-shadow: 0 4px 8px rgba(0,0,0,0.1);'>\n",
-              "        <p style='font-size: 14px; color: #888; margin: 0;'>Количество строк и стобцов</p>\n",
-              "        <h1 style='font-size: 36px; color: #000; margin: 10px 0;'>20335 x 14</h1>\n",
-              "    </div>\n",
-              "    "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 109
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Размер датасета (Test)"
       ],
       "metadata": {
@@ -1488,26 +1453,52 @@
     {
       "cell_type": "code",
       "source": [
-        "test_filled.shape"
+        "# @title Размер датасета Train и Test\n",
+        "train_filled_img = train_filled.shape\n",
+        "test_filled_img = test_filled.shape\n",
+        "cards = [\n",
+        "    (\"TRAIN: Строк и столбцов\", f\"{train_filled_img[0]} x {train_filled_img[1]}\"),\n",
+        "    (\"TEST: Строк и столбцов\", f\"{test_filled_img[0]} x {test_filled_img[1]}\")\n",
+        "]\n",
+        "\n",
+        "# Отображение карточек рядом\n",
+        "display_flex_cards(cards)"
       ],
       "metadata": {
+        "cellView": "form",
+        "id": "iHG-8kXHU4Yg",
+        "outputId": "afc33cef-df3b-494d-cd4e-78ae4ccdb676",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "br0vDqqkAgWT",
-        "outputId": "01d8236d-f132-48d6-ae40-96a1efa1801a"
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        }
       },
-      "execution_count": 110,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(5085, 13)"
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div style='display: flex; gap: 10px;'>\n",
+              "    \n",
+              "    <div style='background-color: #f5f5f5; border-radius: 10px; padding: 20px; width: 200px; text-align: center; box-shadow: 0 4px 8px rgba(0,0,0,0.1);'>\n",
+              "        <p style='font-size: 14px; color: #888; margin: 0;'>TRAIN: Строк и столбцов</p>\n",
+              "        <h1 style='font-size: 36px; color: #000; margin: 10px 0;'>20335 x 14</h1>\n",
+              "    </div>\n",
+              "    \n",
+              "    <div style='background-color: #f5f5f5; border-radius: 10px; padding: 20px; width: 200px; text-align: center; box-shadow: 0 4px 8px rgba(0,0,0,0.1);'>\n",
+              "        <p style='font-size: 14px; color: #888; margin: 0;'>TEST: Строк и столбцов</p>\n",
+              "        <h1 style='font-size: 36px; color: #000; margin: 10px 0;'>5085 x 13</h1>\n",
+              "    </div>\n",
+              "    </div>"
             ]
           },
           "metadata": {},
-          "execution_count": 110
+          "execution_count": 143
         }
       ]
     },
